# -TERMINAL-GAME-Space-Shooter

./: .gitignore  CMakeLists.txt  README.md
assets/: draft.txt
src/: asteroid.cpp  bullet.cpp  cursor_input.cpp  game_logic.cpp  main.cpp  space_ship.cpp  utils.cpp
src/headers/: asteroid.hpp  bullet.hpp  color.hpp  cursor_input.hpp  game_logic.hpp  space_ship.hpp  utils.hpp
